Updated plugin versions in maven templates
replaced Paths.get() by Path.of()
Enhanced TemplateUpdater to support updating plugins in PK's pom file, too